--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@ layout: default
     <header class="masthead text-center">
     <title>Phi Lab</title>
       <p>
-          Geometry and dynamics of complex networks
+        <h1>Geometry and dynamics of complex networks</h1> <br>
 
-      <i>Q1 <br> Q2 <br>
-      Q3<br>
+      <i><br> We integrate achievements from network science, computational neuroscience, neurotechnology,
+          artificial intelligence, physics, and philosophy to understand what makes us humans. <br>
+      <br>
+      <br>
       </i>
 
-      Text
+      <h2>Research topics</h2>
+        Learning of complex representations <br>
+        Reorganization of brain network<br>
+        Dynamics of brain-body interaction<br>
+        The source of creativity and the role of art<br>
 
         <span style="display: block; margin-bottom: 3em"></span>
 
