--- a/index.html
+++ b/index.html
@@ -6,32 +6,31 @@ layout: default
     <header class="masthead text-center">
     <title>Phi Lab</title>
       <p>
-        <h1>Geometry and dynamics of complex networks</h1> <br>
+        <h2>Geometry and dynamics of complex networks</h2> <br>
 
       <i><br> We integrate achievements from network science, computational neuroscience, neurotechnology,
           artificial intelligence, physics, and philosophy to understand what makes us humans. <br>
       <br>
       <br>
       </i>
+        </p>
 
-      <h2>Research topics</h2>
-        Learning of complex representations <br>
-        Reorganization of brain network<br>
-        Dynamics of brain-body interaction<br>
-        The source of creativity and the role of art<br>
+      <h3>Research topics</h3>
+        <b>Learning of complex representations</b> <br>
+        <b>Reorganization of brain network</b><br>
+        <b>Dynamics of brain-body interaction</b><br>
+        <b>The source of creativity and the role of art </b><br>
 
         <span style="display: block; margin-bottom: 3em"></span>
 
+
+      <span style="display: block; margin-bottom: 3em"></span>
+
+      <span style="display: block; margin-bottom: 3em"></span>
       <a href="mailto:finc@umk.pl"><i class="fa fa-envelope-o"></i> finc@umk.pl</a>
-      </p>
-
-      <span style="display: block; margin-bottom: 3em"></span>
-
-
-\
-      <span style="display: block; margin-bottom: 3em"></span>
       Centre for Modern Interdisciplinary Technologies<br>
       Nicolaus Copernicus University, Wileńska 4, 87-100 Toruń, Poland
+
       <span style="display: block; margin-bottom: 3em"></span>
 
     </header>
