--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@ layout: default
       <br>
       </i>
         </p>
+    </header>
 
+    <header class="master text-left">
       <h3>Research topics</h3>
         <b>Learning of complex representations</b> <br>
         <b>Reorganization of brain network</b><br>
@@ -22,16 +24,18 @@ layout: default
         <b>The source of creativity and the role of art </b><br>
 
         <span style="display: block; margin-bottom: 3em"></span>
+    </header>
 
 
       <span style="display: block; margin-bottom: 3em"></span>
 
+    <header class="masthead text-center">
       <span style="display: block; margin-bottom: 3em"></span>
-      <a href="mailto:finc@umk.pl"><i class="fa fa-envelope-o"></i> finc@umk.pl</a>
+      <a href="mailto:finc@umk.pl"><i class="fa fa-envelope-o"></i> finc@umk.pl</a><br>
       Centre for Modern Interdisciplinary Technologies<br>
       Nicolaus Copernicus University, Wileńska 4, 87-100 Toruń, Poland
 
       <span style="display: block; margin-bottom: 3em"></span>
-
     </header>
+
 </div>
