--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: default
       <p>
         <h2>Geometry and dynamics of complex networks</h2> <br>
 
-      <i><br> We integrate achievements from network science, computational neuroscience, neurotechnology,
-          artificial intelligence, physics, and philosophy to understand what makes us humans. <br>
+      <i><br> We integrate achievements from network science, cognitive science, computational neuroscience, neurotechnology,
+          artificial intelligence, and physics to understand what makes us humans. <br>
       <br>
       <br>
       </i>
