--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
         <h2>Geometry and dynamics of complex networks</h2> <br>
 
       <i><br> We integrate achievements from network science, cognitive science, computational neuroscience, neurotechnology,
-          artificial intelligence, and physics to understand what makes us humans. <br>
+          artificial intelligence, and physics to understand mechanisms that shape our experience. <br>
       <br>
       <br>
       </i>
