--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
         <b>Learning of complex representations</b> <br>
         <b>Reorganization of brain network</b><br>
         <b>Dynamics of brain-body interaction</b><br>
-        <b>The source of creativity and the role of art </b><br>
+        <b>Source of creativity and the role of art </b><br>
 
         <span style="display: block; margin-bottom: 3em"></span>
     </header>
