--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@ layout: default
 
     <header class="master text-left">
       <h3>Research topics</h3>
-        <b>Learning of complex representations</b> <br>
-        <b>Reorganization of brain network</b><br>
-        <b>Dynamics of brain-body interaction</b><br>
-        <b>Source of creativity and the role of art </b><br>
+        <b>Learning of complex representations</b> | How do we learn complex networks that surround us? We use tools from
+        network science, applied topology and deep learning to understand the process of learning of complex (spatial and non-spatial)
+        representations of the world. <br>
+        <b>Reorganization of brain networks</b> | What rules govern constant changes in brain network configuration?
+        We use network neuroscience and neuroimaging techniques to understand study the dynamics of functional brain networks
+        during cognitive tasks and learning.<br>
+        <b>Dynamics of brain-body interaction</b> | How our body interacts with the brain network? We want to understand
+        interactions between brain and body during cognition. <br>
+        <b>Creative flow and art perception </b> | What are neuronal mechanisms of creative process in humans? Why art
+        play so important role in human lives? We seek to understand how brain-body interaction shapes the creative flow
+        and art perception.
+        <br>
 
         <span style="display: block; margin-bottom: 3em"></span>
     </header>
