--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
     </header>
 
     <header class="master text-left">
-      <h3>Research topics</h3>
+      <h3>Research topics</h3> <br>
         <b>Learning of complex representations</b> | How do we learn complex networks that surround us? We use tools from
         network science, applied topology and deep learning to understand the process of learning of complex (spatial and non-spatial)
         representations of the world. <br><br>
@@ -25,7 +25,7 @@ layout: default
         We use network neuroscience and neuroimaging techniques to study the dynamics of functional brain networks
         during cognitive tasks and learning. <br><br>
         <b>Dynamics of brain-body interaction</b> | How our body interacts with the brain network? We want to understand
-        interactions between brain and body during cognition. <b><br>
+        interactions between brain and body during cognition. <br> <br>
         <b>Creative flow and art perception </b> | What are neuronal mechanisms of creative process in humans? Why art
         play so important role in human lives? We seek to understand how brain-body interaction shapes the creative flow
         and art perception.
