--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@ layout: default
     <header class="masthead text-center">
     <title>Phi Lab</title>
       <p>
-        <h2>Geometry and dynamics of complex networks</h2> <br>
 
-      <i><br> We integrate achievements from network science, cognitive science, computational neuroscience, neurotechnology,
-          artificial intelligence, and physics to understand mechanisms that shape our experience. <br>
+        <img class='img-responsive center-block' src="/images/other/phi_lab_baner.png" width="100%" height="100%" />
       <br>
       <br>
       </i>
