--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
         <b>Dynamics of brain-body interaction</b> | How our body interacts with the brain network? We want to understand
         interactions between brain and body during cognition. <br> <br>
         <b>Creative flow and art perception </b> | What are neuronal mechanisms of creative process in humans? Why art
-        play so important role in human lives? We seek to understand how brain-body interaction shapes the creative flow
+        plays so important role in human lives? We seek to understand how brain-body interaction shapes the creative flow
         and art perception.
         <br>
 
