--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@ layout: default
     </header>
 
     <header class="master text-left">
-        
+
+        We are independent research group at the [Centre for Modern Interdisciplinary Technologies](https://icnt.umk.pl/en/)
+        at [Nicolaus Copernicus University](https://portal.umk.pl/en) working towards understanding fundamental rules
+        that shape human experience.
+
       <h4>Research topics</h4> <br>
         <b>Learning of complex representations</b> | How do we learn complex networks that surround us? We use tools from
         network science, applied topology and deep learning to understand the process of learning of complex (spatial and non-spatial)
