--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ layout: default
 
     <header class="master text-left">
 
-        We are independent research group at the [Centre for Modern Interdisciplinary Technologies](https://icnt.umk.pl/en/)
-        at [Nicolaus Copernicus University](https://portal.umk.pl/en) working towards understanding fundamental rules
-        that shape human experience.
+        We are independent research group at the <a href="https://icnt.umk.pl/en/">Centre for Modern Interdisciplinary Technologies</a>
+        at <a href="https://portal.umk.pl/en">Nicolaus Copernicus University</a> working towards understanding fundamental rules
+        that shape human experience. <br>
 
       <h4>Research topics</h4> <br>
         <b>Learning of complex representations</b> | How do we learn complex networks that surround us? We use tools from
