--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
 
         We are independent research group at the <a href="https://icnt.umk.pl/en/">Centre for Modern Interdisciplinary Technologies</a>
         at <a href="https://portal.umk.pl/en">Nicolaus Copernicus University</a> working towards understanding fundamental rules
-        that shape human experience. <br>
+        that shape human experience. <br><br>
 
       <h4>Research topics</h4> <br>
         <b>Learning of complex representations</b> | How do we learn complex networks that surround us? We use tools from
@@ -28,7 +28,6 @@ layout: default
         We want to understand interactions between the brain and body during cognition. <br> <br>
         <b>Creative flow and art perception </b> | What are the neuronal mechanisms of the creative process in humans? 
         Why art plays such an essential role in human lives? We seek to understand how brain-body interaction shapes creative flow and art perception.
-        <br>
 
         <span style="display: block; margin-bottom: 3em"></span>
     </header>
