--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@ layout: default
 <div class='container'>
     <header class="masthead text-center">
     <title>Phi Lab</title>
-      <p>
 
         <img class='img-responsive center-block' src="/images/others/phi_lab_banner.png" width="100%" height="100%" />
       </i>
@@ -14,12 +13,12 @@ layout: default
 
     <header class="master text-left">
 
-        We are independent research group at the <a href="https://icnt.umk.pl/en/">Centre for Modern Interdisciplinary Technologies</a>
+        <p>We are independent research group at the <a href="https://icnt.umk.pl/en/">Centre for Modern Interdisciplinary Technologies</a>
         at <a href="https://portal.umk.pl/en">Nicolaus Copernicus University</a> working towards understanding fundamental rules
-        that shape human experience. <br><br>
+            that shape human experience. <br><br></p>
 
       <h4>Research topics</h4> <br>
-        <b>Learning of complex representations</b> | How do we learn complex networks that surround us? We use tools from
+        <p><b>Learning of complex representations</b> | How do we learn complex networks that surround us? We use tools from
         network science, applied topology and deep learning to understand the process of learning of complex (spatial and non-spatial)
         representations of the world. <br><br>
         <b>Reorganization of brain networks</b> | What rules govern constant changes in brain network configuration? 
@@ -27,7 +26,7 @@ layout: default
         <b>Dynamics of brain-body interaction</b> | How our body interacts with the brain network? 
         We want to understand interactions between the brain and body during cognition. <br> <br>
         <b>Creative flow and art perception </b> | What are the neuronal mechanisms of the creative process in humans? 
-        Why art plays such an essential role in human lives? We seek to understand how brain-body interaction shapes creative flow and art perception.
+            Why art plays such an essential role in human lives? We seek to understand how brain-body interaction shapes creative flow and art perception. </p>
 
         <span style="display: block; margin-bottom: 3em"></span>
     </header>
@@ -37,9 +36,9 @@ layout: default
 
     <header class="masthead text-center">
       <span style="display: block; margin-bottom: 3em"></span>
-      <a href="mailto:finc@umk.pl"><i class="fa fa-envelope-o"></i> finc@umk.pl</a><br>
+     <p> <a href="mailto:finc@umk.pl"><i class="fa fa-envelope-o"></i> finc@umk.pl</a><br>
       Centre for Modern Interdisciplinary Technologies<br>
-      Nicolaus Copernicus University, Wileńska 4, 87-100 Toruń, Poland
+         Nicolaus Copernicus University, Wileńska 4, 87-100 Toruń, Poland </p>
 
       <span style="display: block; margin-bottom: 3em"></span>
     </header>
