--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
             that shape human experience. <br><br></p>
 
       <h4>Research topics</h4> <br>
-        <p><b>Learning of complex representations</b> | How do we learn complex networks that surround us? We use tools from
+        <p><b>Learning of complex graphs</b> | How do we learn complex networks that surround us? We use tools from
         network science, applied topology and deep learning to understand the process of learning of complex (spatial and non-spatial)
         representations of the world. <br><br>
         <b>Reorganization of brain networks</b> | What rules govern constant changes in brain network configuration? 
